Update ETL TASK USING PYTHON.ipynb

--- a/ETL TASK USING PYTHON.ipynb
+++ b/ETL TASK USING PYTHON.ipynb
@@ -225,7 +225,7 @@
    "metadata": {},
    "source": [
     "#\n",
-    "**here i added data column in the dataset,if we maintain history in this etl pipeline , so this date column helpful to identify always latest data with the help of date column"
+    "**here i added date column in the dataset,if we maintain history in this etl pipeline , so this date column helpful to identify always latest data with the help of date column"
    ]
   },
   {
